# TernaryCPU

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  build_native.sh  pyproject.toml  test_snake_tal.py  train_mnist.py
AI/: train.py  train_mnist.py
AI/models/: and.json  cross.json  nand.json  (+5 more)
backend/: main.py  snapshot_engine.py  start.sh
data/: download_mnist.sh
docs/: FANTASY_CONSOLE.md  GRAPHICS_SYSTEM.md  TERNARY_OS.md  TODO.md  benchmarks.md  book-ch1-3.tex  book.md  compile-book.aux  compile-book.out  compile-book.tex  compile-book.toc  developer-guide.md  devlog.md  display-system.md  instruction-set.md  tutorial.md  ui-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
gpu_stress/: stress_and_viz.py
paper/: .gitignore  generate_diagrams.py  main.aux  main.tex  main.toc  main_compact.tex  refs.bib
tests/: test_BinaryToTrinary.py  test_TrinaryAddition.py  test_accelerator.py  test_activations.py  test_alu.py  test_arithmetic.py  test_assembler.py  test_branch_predictor.py  test_bus.py  test_cache.py  test_conversion.py  test_cpu.py  test_cpu_accelerator.py  test_cpu_stress.py  test_datasets.py  test_display.py  test_display_framebuffer.py  test_dma.py  test_gpu.py  test_interrupts.py  test_losses.py  test_native_backend.py  test_optimizers.py  test_os.py  test_packed_trits.py  test_perceptron.py  test_pipeline.py  test_profiler.py  test_realistic_cpu.py  test_sdk.py  test_simd.py  test_tensor_core.py  test_ternary_nn.py  test_trainer.py  test_trit_tensor.py  test_vector_ops.py  test_viz_engine.py  test_vram.py
(+176 files in other folders)
