[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trinary"
version = "1.0.0"
description = "Ternary (base-3) computer simulation in pure Python"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["legacy"]
