[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trinary"
version = "1.3.0"
description = "Ternary (base-3) computer simulation — hybrid Python/C emulator with memory-mapped graphics and TernaryOS"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["legacy"]
